# CodeHelpAi

./: .gitignore  code_intel.db  create_admin.py  pyproject.toml  requirements.txt
backend/: graph_incremental.py  graph_incremental2.py  graph_query.py  main.py  schemas.py
backend/api/: admin_routes.py  auth_routes.py  diff_routes.py  history_routes.py  ingestion_routes.py  parse_routes.py  project_routes2.py  projects_query_routes.py  projects_routes.py  query_routes.py  summary_routes.py
backend/core/: auth.py  auth_utils.py
backend/crud/: project_crud.py
backend/db/: crud.py  database.py  db_models.py
backend/diffing/: code_change_detector.py
backend/llm/: llm_node.py  llm_provider.py
backend/nodes/: change_detection_node.py  ingest_update_node.py  ingest_update_node2.py  query_node.py  summarize_changes_node.py  vector_ingest_node.py
backend/parser/: hasher.py  models.py  parser.py  scanner.py
backend/query/: query_engine.py
backend/summarizer/: class_summarizer.py  file_summarizer.py  function_summarizer.py  incremental_summarizer.py  llm_utils.py  models.py
backend/vectorstore/: config.py  embeddings.py  ingest.py  store.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: apiClient.js  client.js
project_data/1/: code_hashes.json  summaries_db.json
project_data/2/: summaries_db.json
project_data/3/: code_hashes.json  summaries_db.json
tests/: conftest.py  test_query.py  test_summarizer.py
vector_store_data/: code_summaries.faiss  code_summaries.pkl
(+10 files in other folders)
